[package]
name = "tstool"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = "0.40.0"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
hyper-util = { version = "0.1.4", features = ["full"] }
http-body-util = "0.1"
bytes = { version = "1", features = ["serde"] }