[package]
name = "demo3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
polars = {version = "0.40.0", features = ["lazy", "strings"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql" ] }
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
dotenv="0.15.0"